[gd_scene load_steps=2 format=3 uid="uid://bvly1kbiy7ohq"]

[ext_resource type="Script" path="res://scripts/control/dead_menu.gd" id="1_on13i"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_on13i")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.113725, 0.141176, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 41.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.964706, 0.188235, 0.564706, 1)
theme_override_font_sizes/font_size = 16
text = "YOU ARE DEAD"

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="Retry" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.964706, 0.188235, 0.564706, 1)
theme_override_font_sizes/font_size = 8
text = "Retry"

[node name="MainMenu" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.964706, 0.188235, 0.564706, 1)
theme_override_font_sizes/font_size = 8
text = "Main Menu"

[node name="Quit" type="Button" parent="ColorRect/MarginContainer/VBoxContainer"]
clip_contents = true
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.964706, 0.188235, 0.564706, 1)
theme_override_font_sizes/font_size = 8
text = "Quit"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
